--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -151,7 +151,7 @@ main {
 main:has(:is(.image, .slider):first-child) {
     padding-top: var(--header-offset-transparent);
 
-    .glide__arrows {
+    > :first-child .glide__arrows {
         top: var(--header-offset-transparent);
     }
 }
