Fix slider height, allow fixed background images

--- a/src/components/layout/slider/slider.astro
+++ b/src/components/layout/slider/slider.astro
@@ -267,6 +267,12 @@ const dataGlideOptions = Object.entries(glideOptions).reduce(
         --bullet-size: 1rem;
     }
 
+    .glide,
+    .glide__track,
+    .glide__slides {
+        height: 100%;
+    }
+
     .glide__slides {
         min-height: var(--height);
     }
