--- a/src/components/image/asideImage.astro
+++ b/src/components/image/asideImage.astro
@@ -24,6 +24,10 @@ const { width = 256, height = 256, class: classes, title } = Astro.props;
         margin-top: 0.5em;
     }
 
+    figure {
+        margin: 3rem 0;
+    }
+
     figure.align-left {
         margin: 0 2rem 2rem 0;
         float: left;
